Added version 1.7.10-preview
NEW
 * Add XML interface to search results (search_xml.jsp). The URL parameters are identical to search.jsp.
 * All tags now have an optional attribute 'escape' to escape its output (html, xml or none)
 * JarPreparator which indexes the filenames in *.jar, *.war, *.ear archives.
 * ZipPreparator which indexes the filenames in *.zip archives.

BUGFIX
 * DocumentFactory.createDocument(): IO-Stream was never closed
 * IndexUpdateManager.checkUpdate(): IO-Stream was never closed
 * No NullpointerException if AnalyzerType unknown; instead, re-index
 * build.xml: Allow compiling when only JAVA_HOME is set
 * build.xml: Throw message when build.properties not found
 * Regression from 1.7.9: File2Http-Bridge failed to work